# scxx

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  README.org
docs/: 01.md  02.md  DESCRIPTION.md  interpreter.spec
include/: call.h  condition.h  cv_string.h  definition.h  environment.h  error.h  eval.h  expression.h  lexer.h  parser.h  predicate.h  primitive.h  procedure.h  quotation.h  type.h
src/: CMakeLists.txt  call.cc  condition.cc  definition.cc  environment.cc  eval.cc  expression.cc  primitive.cc  procedure.cc  quotation.cc  run.cc
test/: CMakeLists.txt  main.cc  test.cc  test_cv_string.cc  test_std_variant.cc
test/approval_tests/: test.SCXX.LEX_1.approved.txt  test.SCXX.PARSER_1.approved.txt  test.SCXX.PARSER_2.approved.txt  test.SCXX.PARSER_3.approved.txt  test.SCXX.PARSER_5.approved.txt
